# segment-classify-pipeline

./: .gitignore  README.md  example.ipynb  pyproject.toml
images/: 3K_dox_LAMP1rfp_mitoBFP_untreated_01.czi  3K_dox_LAMP1rfp_mitoBFP_untreated_02.czi  3K_dox_LAMP1rfp_mitoBFP_untreated_03.czi  3K_dox_LAMP1rfp_mitoBFP_untreated_04.czi  3K_dox_LAMP1rfp_mitoBFP_untreated_05.czi  3K_dox_LAMP1rfp_mitoBFP_untreated_06.czi  3K_dox_LAMP1rfp_mitoBFP_untreated_07.czi  3K_dox_LAMP1rfp_mitoBFP_untreated_08.czi
inclusion_pipeline/: __init__.py  classification.py  pipeline.py  preprocessing.py  segmentation.py  utils.py
